--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
            <a href="" lang="en">WebStudio</a>
            <ul>
                <li><a href="">Студия</a></li>
-               <li><a href="">Портфолио</a></li>
+               <li><a href="./portfolio.html">Портфолио</a></li>
                <li><a href="">Контакты</a></li>
            </ul>
        </nav>
@@ -27,8 +27,8 @@
           <button type="button">Заказать услугу</button>
       </section>
       <section>
-      <h2>Особенности</h2>
-       <div>
+          <div>
+           <h2>Особенности</h2>
            <ul>
                <li>
                    <h3>Внимание к деталям</h3>
@@ -47,7 +47,7 @@
                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                </li>
            </ul>
-           </div>
+          </div>
       </section>
       <section>
            <h2>Чем мы занимаемся</h2>
@@ -87,7 +87,7 @@
        <a href="" lang="en">WebStudio</a>
        <address>
            <ul>
-               <li>г. Киев, пр-т Леси Украинки, 26</li>
+               <li> <a href="https://goo.gl/maps/YVqeG4Qvas63cvU16" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26 </a></li>
                <li><a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a></li>
                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
            </ul>
