--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </section>
       <section>
           <div>
-           <h2>Особенности</h2>
+           <h2 hidden>Особенности</h2>
            <ul>
                <li>
                    <h3>Внимание к деталям</h3>
