--- a/portfolio.html
+++ b/portfolio.html
@@ -21,4 +21,91 @@
            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
        </ul>
    </header>
-   
+   <main>
+    <section>
+        <div>
+         <h2 hidden>Группы</h2>
+         <ul>
+             <li>
+                <button type="button">Все</button>
+             </li>
+             <li>
+                <button type="button">Веб-сайты</button>
+             </li>
+             <li>
+                <button type="button">Приложения</button>
+             </li>
+             <li>
+                <button type="button">Дизайн</button>
+             </li>
+             <li>
+                <button type="button">Маркетинг</button>
+             </li>
+         </ul>
+        </div>
+    </section>
+    <section>
+        <div>
+         <h2 hidden>Проекты</h2>
+         <ul>
+            <li>
+                <img src="./images/site.jpg" alt="Site" width="370">
+                <h3>Технокряк</h3>
+                <p>Веб-сайт</p>
+            </li>
+            <li>
+                <img src="./images/poster.jpg" alt="Постер" width="370">
+                <h3>Постер <span lang="en">New Orlean vs Golden Star</span> </h3>
+                <p>Дизайн</p>
+            </li>
+            <li>
+                <img src="./images/seafood.jpg" alt="Лого ресторана" width="370">
+                <h3>Ресторан <span lang="en">Seafood</span> </h3>
+                <p>Приложение</p>
+            </li>
+            <li>
+                <img src="./images/ProjectPrime.jpg" alt="Наушники" width="370">
+                <h3>Проект <span lang="en">Prime</span> </h3>
+                <p>Маркетинг</p>
+            </li>
+            <li>
+                <img src="./images/ProjectBoxes.jpg" alt="Коробки" width="370">
+                <h3>Проект <span lang="en">Boxes</span> </h3>
+                <p>Приложение</p>
+            </li>
+            <li>
+                <img src="./images/ProjectInspiration.jpg" alt="Монитор ПК" width="370">
+                <h3 lang="en">Inspiration has no Borders</h3>
+                <p>Веб-сайт</p>
+            </li>
+            <li>
+                <img src="./images/L.jpg" alt="Каталог" width="370">
+                <h3>Издание <span lang="en">Limited Edition</span> </h3>
+                <p>Дизайн</p>
+            </li>
+            <li>
+                <img src="./images/lab.jpg" alt="Бирка" width="370">
+                <h3>Проект <span lang="en">LAB</span> </h3>
+                <p>Маркетинг</p>
+            </li>
+            <li>
+                <img src="./images/gb.jpg" alt="ПК" width="370">
+                <h3 lang="en">Growing Business</h3>
+                <p>Приложение</p>
+            </li>
+         </ul>
+        </div>
+    </section>
+   </main>
+   <footer>
+    <a href="" lang="en">WebStudio</a>
+    <address>
+        <ul>
+            <li> <a href="https://goo.gl/maps/YVqeG4Qvas63cvU16" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26 </a></li>
+            <li><a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </address>
+</footer>
+</body>
+</html>
